bk_ida/gobmkida/g2/do_find_superstring
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_find_superstring/src/engine/utils.c:2121:7: error: use of undeclared identifier 'dword_76BCFC'
v14 = dword_76BCFC[v12]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_find_superstring/src/obj/1/utils.o] Error 1
